--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <input type="hidden" name="sid1" value="alex">
             <input type="hidden" name="sid2" value="alex2">
             <input type="hidden" name="sid3" value="alex3">
-            <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+            <input type="hidden" name="redirect_url" value="https://cardiline.github.io/bg/success/index.html">
                             </form>
                             <img src="images/security.png" alt="" class="control">
                         </div>
@@ -158,7 +158,7 @@
             <input type="hidden" name="sid1" value="alex">
             <input type="hidden" name="sid2" value="alex2">
             <input type="hidden" name="sid3" value="alex3">
-            <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+            <input type="hidden" name="redirect_url" value="https://cardiline.github.io/bg/success/index.html">
                             </form>
                             <img src="images/security.png" alt="" class="control add_03">
                             <img src="images/control_form.png" alt="" class="control add_04">
@@ -357,7 +357,7 @@
             <input type="hidden" name="sid1" value="alex">
             <input type="hidden" name="sid2" value="alex2">
             <input type="hidden" name="sid3" value="alex3">
-            <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+            <input type="hidden" name="redirect_url" value="https://cardiline.github.io/bg/success/index.html">
                                 </form>
                             </div>
                             <ul class="sec_data_base sec_data_base1">
@@ -417,7 +417,7 @@
             <input type="hidden" name="sid1" value="alex">
             <input type="hidden" name="sid2" value="alex2">
             <input type="hidden" name="sid3" value="alex3">
-            <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+            <input type="hidden" name="redirect_url" value="https://cardiline.github.io/bg/success/index.html">
                         </form>
                         <img src="images/security.png" alt="" class="control add_03">
                         <img src="images/control_form.png" alt="" class="control add_04">
@@ -530,7 +530,7 @@
             <input type="hidden" name="sid1" value="alex">
             <input type="hidden" name="sid2" value="alex2">
             <input type="hidden" name="sid3" value="alex3">
-            <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+            <input type="hidden" name="redirect_url" value="https://cardiline.github.io/bg/success/index.html">
                                 </form>
                             </div>
                             <ul class="sec_data_base sec_data_base1">
@@ -591,7 +591,7 @@
             <input type="hidden" name="sid1" value="alex">
             <input type="hidden" name="sid2" value="alex2">
             <input type="hidden" name="sid3" value="alex3">
-            <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+            <input type="hidden" name="redirect_url" value="https://cardiline.github.io/bg/success/index.html">
                         </form>
                         <img src="images/security.png" alt="" class="control add_03">
                         <img src="images/control_form.png" alt="" class="control add_04">
@@ -677,7 +677,7 @@
             <input type="hidden" name="sid1" value="alex">
             <input type="hidden" name="sid2" value="alex2">
             <input type="hidden" name="sid3" value="alex3">
-            <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+            <input type="hidden" name="redirect_url" value="https://cardiline.github.io/bg/success/index.html">
                                 </form>
                             </div>
                             <ul class="sec_data_base sec_data_base1">
